# optimism

./: .dockerignore  .editorconfig  .gitignore  .gitmodules  Cargo.toml  MakefileDev  go.mod  go.sum
.circleci/: config.yml
bedrock-devnet/devnet/: __init__.py
indexer/database/: bridge_transactions.go  bridge_transfers.go
indexer/e2e_test/: bridge_e2e_test.go  bridge_transaction_e2e_test.go  bridge_transfers_e2e_test.go
indexer/migrations/: 20230523_create_schema.sql
indexer/node/: client.go
indexer/processor/: l1_processor.go  l2_processor.go  processor.go  standard_bridge.go
op-batcher/: Dockerfile
op-chain-ops/: Makefile
op-chain-ops/cmd/check-l2/: main.go
op-chain-ops/contracts/: common.go
op-chain-ops/genesis/: layer_one.go
op-challenger/fault/: service.go
op-challenger/fault/alphabet/: provider.go
op-challenger/fault/cannon/: local.go  provider.go  provider_test.go
op-e2e/: system_tob_test.go  withdrawal_helper.go
op-node/withdrawals/: utils.go
op-proposer/: Dockerfile
ops-bedrock/: Dockerfile.l1  docker-compose.yml  entrypoint-l1.sh
ops/docker/ci-builder/: Dockerfile
test-infra/: Cargo.toml
test-infra/src/: check_service.rs  ethereum_key.rs  lib.rs  solc.rs  tx.rs
test-infra/tests/: local_optimism_sol.rs
test-infra/tests/eth/: mod.rs
test-infra/tests/mimicaw_helper/: mod.rs
test-infra/tests/sol/: mod.rs
test-infra/tests/tmp/: mod.rs
test-infra/tests/tmpdir/: mod.rs
